--- a/Api_gateway/src/main/resources/application.yml
+++ b/Api_gateway/src/main/resources/application.yml
@@ -1,3 +1,34 @@
+#spring:
+#  application:
+#    name: api-gateway
+#  cloud:
+#    gateway:
+#      mvc:
+#        routes:
+#          - id: user-service
+#            uri: lb://user-service
+#            predicates:
+#              - Path=/api/v1/auth/**
+#          - id: vehicle-service
+#            uri: lb://vehicle-service
+#            predicates:
+#              - Path=/api/v1/vehicle/**
+#          - id: payment-service
+#            uri: lb://payment-service
+#            predicates:
+#              - Path=/api/v1/payment/**
+#          - id: ticket-service
+#            uri: lb://ticket-service
+#            predicates:
+#              - Path=/api/v1/ticket/**
+#server:
+#  port: 8080
+#eureka:
+#  client:
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka/
+
 spring:
   application:
     name: api-gateway
@@ -9,22 +40,24 @@ spring:
             uri: lb://user-service
             predicates:
               - Path=/api/v1/auth/**
-          - id: item-service
-            uri: lb://item-service
-            predicates:
-              - Path=/api/v1/item/**
           - id: vehicle-service
             uri: lb://vehicle-service
             predicates:
               - Path=/api/v1/vehicle/**
+            filters:
+#              - name: securityFilterChain
           - id: payment-service
             uri: lb://payment-service
             predicates:
               - Path=/api/v1/payment/**
+            filters:
+#              - name: DoFilterInternal
           - id: ticket-service
             uri: lb://ticket-service
             predicates:
               - Path=/api/v1/ticket/**
+            filters:
+#              - name: DoFilterInternal
 server:
   port: 8080
 eureka:
@@ -32,3 +65,4 @@ eureka:
     register-with-eureka: true
     service-url:
       defaultZone: http://localhost:8761/eureka/
+
